--- a/src/app/shared/authentication/signup/signup.component.scss
+++ b/src/app/shared/authentication/signup/signup.component.scss
@@ -244,3 +244,27 @@ section.sign-up {
   }
 
 }
+
+.image {
+  display: flex;
+  justify-content: center;
+
+  .circle {
+    background: #f3f3f3;
+    padding: 0.5em;
+    width: 120px;
+    height: 120px;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #ce564b;
+  }
+
+  img {
+    height: 120px;
+    border-radius: 100%;
+    width: 120px;
+    border: 3px solid #f6f6f6;
+  }
+}
