--- a/src/app/shared/authentication/signin/signin.component.scss
+++ b/src/app/shared/authentication/signin/signin.component.scss
@@ -15,8 +15,8 @@ section.login {
   background-repeat: no-repeat;
 
   img.logo {
-    width: 93px;
-    height: 15vh;
+    width: 80px;
+    height: 100px;
     margin: 50px auto 79px auto;
   }
 
