--- a/src/app/shared/authentication/signup-wizard/signup-wizard.component.html
+++ b/src/app/shared/authentication/signup-wizard/signup-wizard.component.html
@@ -146,7 +146,7 @@
     <app-signup
             *ngIf="!stepOneComplete"
             (stepTwoComplete)="completeStepTwo($event)"
-            (backToFirst)="backToFirst()">
+            (back)="backToFirst()">
     </app-signup>
 
 
