--- a/src/app/shared/authentication/signup/signup.component.html
+++ b/src/app/shared/authentication/signup/signup.component.html
@@ -130,7 +130,7 @@
     </form>
     <div class="controls">
         <button class="confirm" (click)="continueToThird()">CONTINUE</button>
-        <button class="cancel" (click)="returnToPreviusStage()">CANCEL</button>
+        <button class="cancel" (click)="onBackPressed()">CANCEL</button>
     </div>
 </section>
 
