--- a/src/app/shared/drill/drill.component.scss
+++ b/src/app/shared/drill/drill.component.scss
@@ -6,7 +6,7 @@ section.drill-results {
   display: flex;
   flex-direction: column;
 
-  background-image: linear-gradient(#e4e4e496, #e4e4e496), url("../../../assets/drill-results.jpg");
+  background-color: #101820ff;
   background-size: 100% 100%;
   background-position: center center;
   background-repeat: no-repeat;
@@ -30,21 +30,25 @@ section.drill-results {
     div.info {
       display: flex;
       align-items: center;
-      width: 50%;
+      width: 60%;
       justify-content: space-evenly;
-      img{
-        height: 30px !important;
-      }
 
-      p {
-        margin: 0;
-        font-size: 20px;
-        line-height: 24px;
-        letter-spacing: 0.26px;
-        color: white;
+      div {
+        display: flex;
+        align-items: center;
 
-        &.seperator {
-          padding: 0 0.5em;
+        img {
+          height: 20px !important;
+        }
+
+        p {
+          margin: 0;
+          font-size: 15px;
+          color: white;
+
+          &.seperator {
+            padding: 0 0.5em;
+          }
         }
       }
     }
@@ -53,12 +57,13 @@ section.drill-results {
       width: 130px;
       border-radius: 4px;
       height: 36px;
-      background-color: #ce564b;
+      background-color: #fee715ff;
 
       font-size: 14px;
       line-height: 16px;
       letter-spacing: 1.25px;
-      color: white;
+      color: #101820ff;
+      font-weight: bold;
     }
   }
 
@@ -73,10 +78,6 @@ section.drill-results {
   }
 
   div.connection-details {
-    position: absolute;
-    top: 1em;
-    left: 33px;
-
     display: flex;
     flex-direction: column;
 
@@ -93,7 +94,7 @@ section.drill-results {
       p {
         font-size: 12px;
         line-height: 16px;
-        color: rgba(0, 0, 0, 0.81);
+        color: white;
         margin: 0;
       }
     }
@@ -116,27 +117,23 @@ section.drill-results {
 
     .some-wrapper {
       position: relative;
-      width: 60%;
       display: flex;
       justify-content: center;
       align-items: center;
 
       .counter-shot {
         position: absolute;
-        top: 0px;
-        left: 0px;
-        font-family: Roboto;
+        font-family: Roboto, serif;
         font-size: 22px;
-        font-weight: normal;
         font-stretch: normal;
         font-style: normal;
         line-height: 1.14;
         letter-spacing: normal;
         text-align: left;
         color: rgba(0, 0, 0, 0.81);
-        color: rgba(0, 0, 0, 0.81);
-        height: 295px;
-        width: 295px;
+        width: 100%;
+        height: 100%;
+        font-weight: 900;
         justify-content: center;
         display: flex;
         align-items: center;
@@ -149,9 +146,9 @@ section.drill-results {
       justify-content: center;
       width: 100%;
       height: 200px;
-      background-color: #e4e4e49c;
       position: relative;
       border-radius: 4px;
+      color: #fee715ff;
 
       div.dot {
         position: absolute;
@@ -188,9 +185,9 @@ section.drill-results {
 
         p {
           margin: 0;
-          font-size: 30px;
+          font-size: 20px;
           letter-spacing: 0.19px;
-          color: rgba(0, 0, 0, 0.8);
+          color: #fee715ff;
           text-align: center;
         }
       }
@@ -208,7 +205,7 @@ section.drill-results {
 
     div.results-table {
       display: flex;
-      width: 50%;
+      width: 100%;
       justify-content: center;
       align-items: center;
       height: 100%;
@@ -423,7 +420,7 @@ div.targetHoly {
 
 
   div.results-table {
-    width: 353px;
+    width: 100%;
     height: 250px;
     position: relative;
 
@@ -435,7 +432,7 @@ div.targetHoly {
       display: block;
 
       height: 200px;
-      width: 353px;
+      width: 100%;
       border-radius: 5px;
 
       direction: rtl;
@@ -610,9 +607,9 @@ div.welcome-message {
   justify-content: center;
   width: 100%;
   height: 200px;
-  background-color: #e4e4e49c;
   position: relative;
   border-radius: 4px;
+  color: #fee715ff;
 
   div.dot {
     position: absolute;
@@ -651,7 +648,7 @@ div.welcome-message {
       margin: 0;
       font-size: 40px;
       letter-spacing: 0.19px;
-      color: rgba(0, 0, 0, 0.8);
+      color: #fee715ff;
       text-align: center;
     }
   }
@@ -671,7 +668,7 @@ div.welcome-message {
 @media only screen and (min-device-width: 673px) and (min-device-height: 360px) and (orientation: landscape) {
   section.drill-results {
     div.results-table {
-      width: 370px;
+      width: 100%;
       height: 250px;
       position: relative;
 
@@ -683,7 +680,7 @@ div.welcome-message {
         display: block;
 
         height: 200px;
-        width: 370px;
+        width: 100%;
         border-radius: 5px;
 
         direction: rtl;
@@ -715,6 +712,7 @@ div.welcome-message {
               width: calc(100% / 4);
               box-sizing: border-box;
               padding: 0 0.5em;
+              text-align: left;
 
               svg {
                 width: 24px;
@@ -728,6 +726,7 @@ div.welcome-message {
                 line-height: 14px;
                 letter-spacing: 0.12px;
                 color: rgba(0, 0, 0, 0.87);
+                width: 100%;
               }
             }
           }
@@ -793,7 +792,7 @@ div.welcome-message {
           letter-spacing: 0.12px;
           box-sizing: border-box;
           padding: 0 0.5em;
-          text-align: right;
+          text-align: left;
           margin: 0;
         }
       }
@@ -818,10 +817,6 @@ div.welcome-message {
     }
 
     div.connection-details {
-      position: absolute;
-      top: 0em;
-      left: 5px;
-
       display: flex;
       flex-direction: column;
 
@@ -838,7 +833,7 @@ div.welcome-message {
         p {
           font-size: 12px;
           line-height: 16px;
-          color: rgba(0, 0, 0, 0.81);
+          color: white;
           margin: 0;
         }
       }
@@ -848,6 +843,8 @@ div.welcome-message {
       img {
         height: 300px;
         width: 300px;
+        background: white;
+        border-radius: 100%;
       }
     }
   }
@@ -982,6 +979,43 @@ div.welcome-message {
 .yellow {
   color: #ffcc00;
 }
-.lastShot{
+
+.lastShot {
   background: #dfa14c !important;
+}
+
+.squar-info {
+  color: white;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.drag-arrow {
+  width: 50px;
+  background: #fee715ff;
+  position: absolute;
+  right: 0;
+  top: 40%;
+  height: 50px;
+  border-top-left-radius: 100px;
+  border-bottom-left-radius: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    height: 40px;
+  }
+}
+
+.table-from-right {
+  height: 100%;
+  position: absolute;
+  background: #101820ff;
+  right: 0;
+}
+
+.white {
+  color: white !important;
 }
