--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -363,6 +363,7 @@ div.welcome-message {
 ::ng-deep .full-screen-modal {
   width: 100%;
   max-width: 100% !important;
+  height: 100%;
 }
 
 ::ng-deep .mat-dialog-container {
@@ -370,10 +371,11 @@ div.welcome-message {
 }
 
 //]
-.bla{
+.bla {
   display: flex;
   justify-content: center;
   align-content: center;
+
   div.image-container {
     width: 70%;
     height: 70px;
