--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -21,9 +21,9 @@
         </ng-template>
         <app-tab1></app-tab1>
     </mat-tab>
-    <mat-tab label="Second">
+    <mat-tab label="Second" (click)="onTrainClicked()">
         <ng-template mat-tab-label>
-            <div class="icon" [ngClass]="{'active': selectedTab === 1}">
+            <div class="icon" [ngClass]="{'active': selectedTab === 1}" (click)="onTrainClicked()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
                     <g id="_001-aim" data-name="001-aim" opacity="0.5">
                         <path id="Path_1250"
